--- a/Cab_Invoice_Generator/Cab_Invoice_Generator.csproj
+++ b/Cab_Invoice_Generator/Cab_Invoice_Generator.csproj
@@ -44,9 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CabInvoiceGenerator.cs" />
+    <Compile Include="CarInvoiceException.cs" />
+    <Compile Include="InvoiceSummary.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ride.cs" />
+    <Compile Include="RideRepository.cs" />
+    <Compile Include="RideType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
